Revision history for Perl extension DBIx::DataModel.

v2.46 02.06.2015
  - let SQL::Abstract quote identifiers in ON conditions (Sergiy Zuban++)
  - fix some edge cases for $statement->row_count() (Sergiy Zuban++)
  - RT#102908, schema generator accepts databases without any foreign key assoc
  - RT#104856, allow dots in DBMS function names (like Oracle DBMS_LOB.SUBSTR)

v2.45 08.01.2015
  - fix incorrect handling of column aliases in nested subqueries

v2.44 19.12.2014
  - RT100996, allow literal SQL in inserts
  - RT099205, transactions & changing dbh

v2.43 21.04.2014
  - drop statement methods ->goto_page(), ->shift_page(), ->next_page()
  - new recipe in Cookbook : how to quote table and column names (RT#93529)
  - check reftypes through Scalar::Does
  - call ->finish() on sth (Sergiy Zuban++)

v2.42 04.01.2014 : adding support for Plack::App::AutoCRUD
  - case-insensitivity for method $schema->db_table($db_name)
  - Schema::Generator::fromDBI takes new arguments $catalog, $schema, $type

v2.41 22.07.2013
  - fix bug in define_class() when DBIDM was artificially pre-populated
  - added method $schema->db_table($db_name)
  - don't generate duplicate associations with same names between same tables
  - better API for Generator.pm
  - Statement::Oracle, correct handling of -page_size / -page_index

v2.40 24.06.2013
  - fix multiple inheritance bug in joins with the same table twice

v2.39 17.06.2013
  - fix https://rt.cpan.org/Ticket/Display.html?id=86219 (-where_on side effect)

v2.38 25.05.2013
  - fixed test in v2_generator.t when Lingua::Inflect::EN is not installed

v2.37 21.05.2013
  - removed workaround for DBD::Oracle bug (fixed in v1.62)

v2.36 18.04.2013
  - adapt for SQLAM 1.15 : bind values with types must be of shape
    [{dbd_attrs => \%datatype}, $orig_value] (like in DBIx::Class)

v2.35 14.04.2013
  - reintroduced tmp workaround for DBD::Oracle bug (will only be fixed in v1.61)
  - adapt for SQLAM 1.14

v2.34 08.04.2013