@@ -23,7 +23,20 @@ our @EXPORT = qw/define_class define_method define_readonly_accessors
 BEGIN {no strict 'refs'; *does = \&SQL::Abstract::More::does;}
 
 
+sub _check_call_as_class_method {
+  my $first_arg = $_[0];
+
+  if ($first_arg && !ref $first_arg && $first_arg->isa(__PACKAGE__) ) {
+    my $func = (caller(1))[3];
+    carp "calling $func() as class method is obsolete; import and call as a function";
+    shift @_;
+  }
+}
+
+
+
 sub define_class {
+  &_check_call_as_class_method;
 
   # check parameters
   my %params = validate(@_, {
@@ -66,6 +79,9 @@ sub define_class {
 
 
 sub define_method {
+  &_check_call_as_class_method;
+
+  
   # check parameters
   my %params = validate(@_, {
       class          => {type => SCALAR               },
@@ -95,6 +111,8 @@ sub define_method {
 
 
 sub define_readonly_accessors {
+  &_check_call_as_class_method;
+
   my ($target_class, @accessors) = @_;
 
   foreach my $accessor (@accessors) {
